--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="esense"
-        android:icon="@mipmap/ic_launcher">
+        android:label="ConnectB"
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
